# FALCON

./: pixi.toml  pyproject.toml  setup.py  shell.nix
sim2real/: README.md
sim2real/config/g1/: g1_29dof_falcon.yaml
sim2real/rl_policy/: base_policy.py
sim2real/rl_policy/loco_manip/: loco_manip.py
sim2real/sim_env/: base_sim.py
sim2real/utils/comm/command_sender/unitree/: unitree_command_sender.py
