[project]
name = "falcon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "easydict>=1.13",
  "hydra-core>=1.3.2",
  "ipdb>=0.13.13",
  "joblib>=1.5.2",
  "loguru>=0.7.3",
  "loop-rate-limiters>=1.2.0",
  "lxml>=6.0.2",
  "matplotlib>=3.10.8",
  "meshcat>=0.3.2",
  "mujoco>=3.4.0",
  "numpy>=2.3.5",
  "numpy-stl>=3.2.0",
  "onnx>=1.20.0",
  "onnxruntime>=1.23.2",
  "open3d>=0.19.0",
  "opencv-python>=4.11.0.86",
  "pinocchio>=0.4.3",
  "plotly>=6.5.0",
  "pygame>=2.6.1",
  "pynput>=1.8.1",
  "pyyaml>=6.0.3",
  "rich>=14.2.0",
  "scipy>=1.16.3",
  "sshkeyboard>=2.3.1",
  "tensorboard>=2.20.0",
  "termcolor>=3.2.0",
  "tqdm>=4.67.1",
  "unitree-sdk2py",
  "wandb>=0.23.1",
]

[tool.uv.sources]
unitree-sdk2py = { git = "https://github.com/Oya-Tomo/unitree_sdk2_python.git", branch = "master" }
